"Mask From Cavity" operator crashes Blender #101464

Closed
opened 2022-09-29 15:12:37 +02:00 by Julien Kaspar · 8 comments
Member

System Information
Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-29 09:16, hash: f1990bd900

Short description of error
This is related to the newly added auto-masking features for sculpt mode.
Use the "Mask From Cavity" operator either from the "Mask" menu in sculpt mode
or via the Options panel when "Cavity" or "Cavity (Inverted)" auto-masking is enabled.
This will immediately crash Blender

**System Information** Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-29 09:16, hash: `f1990bd900` **Short description of error** This is related to the newly added auto-masking features for sculpt mode. Use the "Mask From Cavity" operator either from the "Mask" menu in sculpt mode or via the Options panel when "Cavity" or "Cavity (Inverted)" auto-masking is enabled. This will immediately crash Blender
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
Process 37078 stopped
* thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440)
    frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=0, UNUSED_tls=0x00007fffffffcb40) at sculpt_ops.c:1037:59
   1034   SCULPT_undo_push_node(tdata->ob, node, SCULPT_UNDO_MASK);
   1035
   1036   AutomaskingNodeData automask_data;
-> 1037   SCULPT_automasking_node_begin(tdata->ob, ss, ss->cache->automasking, &automask_data, node);
   1038
   1039   BKE_pbvh_vertex_iter_begin (ss->pbvh, node, vd, PBVH_ITER_UNIQUE) {
   1040     SCULPT_automasking_node_update(ss, &automask_data, &vd);
  thread #22, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440)
    frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=2, UNUSED_tls=0x00007fffedbb68e0) at sculpt_ops.c:1037:59
   1034   SCULPT_undo_push_node(tdata->ob, node, SCULPT_UNDO_MASK);
   1035
   1036   AutomaskingNodeData automask_data;
-> 1037   SCULPT_automasking_node_begin(tdata->ob, ss, ss->cache->automasking, &automask_data, node);
   1038
   1039   BKE_pbvh_vertex_iter_begin (ss->pbvh, node, vd, PBVH_ITER_UNIQUE) {
   1040     SCULPT_automasking_node_update(ss, &automask_data, &vd);
  thread #36, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440)
    frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=1, UNUSED_tls=0x00007fffa10c48e0) at sculpt_ops.c:1037:59
   1034   SCULPT_undo_push_node(tdata->ob, node, SCULPT_UNDO_MASK);
   1035
   1036   AutomaskingNodeData automask_data;
-> 1037   SCULPT_automasking_node_begin(tdata->ob, ss, ss->cache->automasking, &automask_data, node);
   1038
   1039   BKE_pbvh_vertex_iter_begin (ss->pbvh, node, vd, PBVH_ITER_UNIQUE) {
   1040     SCULPT_automasking_node_update(ss, &automask_data, &vd);
(lldb) bt
* thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440)
  * frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=0, UNUSED_tls=0x00007fffffffcb40) at sculpt_ops.c:1037:59
    frame #1: 0x000000000eff1219 blender`RangeTask::operator(this=0x0000000019328bd8, r=0x0000000019328bc8)(tbb::blocked_range<int> const&) const at task_range.cc:83:7
    frame #2: 0x000000000eff1c1a blender`tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::run_body(this=0x0000000019328bc0, r=0x0000000019328bc8) at parallel_for.h:115:13
    frame #3: 0x000000000eff1893 blender`void tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type> >::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(this=0x0000000019328bf8, start=0x0000000019328bc0, range=0x0000000019328bc8) at partitioner.h:423:19
    frame #4: 0x000000000eff1790 blender`void tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(this=0x0000000019328bf8, start=0x0000000019328bc0, range=0x0000000019328bc8) at partitioner.h:256:16
    frame #5: 0x000000000eff1677 blender`tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::execute(this=0x0000000019328bc0) at parallel_for.h:142:22
    frame #6: 0x0000000000a3e035 blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 533
    frame #7: 0x0000000000a3e2eb blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 235
    frame #8: 0x0000000000a3bb00 blender`tbb::internal::generic_scheduler::local_spawn_root_and_wait(tbb::task*, tbb::task*&) + 144
    frame #9: 0x0000000000366b3b blender`tbb::task::spawn_root_and_wait(root=0x0000000019328bc0) at task.h:809:30
    frame #10: 0x000000000eff140c blender`tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::run(range=0x00007fffffffd068, body=0x00007fffffffd078, partitioner=0x00007fffffffcff0) at parallel_for.h:95:17
    frame #11: 0x000000000eff02ab blender`void tbb::parallel_for<tbb::blocked_range<int>, RangeTask>(range=0x00007fffffffd068, body=0x00007fffffffd078) at parallel_for.h:201:5
    frame #12: 0x000000000efefdfe blender`::BLI_task_parallel_range(start=0, stop=3, userdata=0x00007fffffffd140, func=(blender`sculpt_bake_cavity_exec_task_cb at sculpt_ops.c:1026), settings=0x00007fffffffd108) at task_range.cc:117:7
    frame #13: 0x00000000020bd831 blender`sculpt_bake_cavity_exec(C=0x0000000018bde7d8, op=0x000000001c51c778) at sculpt_ops.c:1150:3
    frame #14: 0x0000000000a5aa59 blender`wm_operator_invoke(C=0x0000000018bde7d8, ot=0x0000000019110688, event=0x0000000019a9a9f8, properties=0x00007fffffffe0b0, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.cc:1455:16
    frame #15: 0x0000000000a50567 blender`wm_operator_call_internal(C=0x0000000018bde7d8, ot=0x0000000019110688, properties=0x00007fffffffe0b0, reports=0x0000000000000000, context=WM_OP_INVOKE_REGION_WIN, poll_only=false, event=0x0000000019a9a9f8) at wm_event_system.cc:1649:18
    frame #16: 0x0000000000a50f8a blender`::WM_operator_name_call_ptr(C=0x0000000018bde7d8, ot=0x0000000019110688, context=WM_OP_INVOKE_REGION_WIN, properties=0x00007fffffffe0b0, event=0x0000000000000000) at wm_event_system.cc:1697:10
    frame #17: 0x0000000000a5139f blender`::WM_operator_name_call_ptr_with_depends_on_cursor(C=0x0000000018bde7d8, ot=0x0000000019110688, opcontext=WM_OP_INVOKE_REGION_WIN, properties=0x00007fffffffe0b0, event=0x0000000000000000, drawstr="Mask From Cavity") at wm_event_system.cc:1890:5
    frame #18: 0x00000000021cc76c blender`ui_apply_but_funcs_after(C=0x0000000018bde7d8) at interface_handlers.c:1018:7
    frame #19: 0x00000000021cac4e blender`ui_handler_region_menu(C=0x0000000018bde7d8, event=0x00000000205cd1d8, UNUSED_userdata=0x000000001f831d88) at interface_handlers.c:11405:3
    frame #20: 0x0000000000a5c6d1 blender`wm_handler_ui_call(C=0x0000000018bde7d8, handler=0x000000001f673e98, event=0x00000000205cd1d8, always_pass=0) at wm_event_system.cc:786:16
    frame #21: 0x0000000000a5ba37 blender`wm_handlers_do_intern(C=0x0000000018bde7d8, win=0x000000001e950e48, event=0x00000000205cd1d8, handlers=0x000000001e950f60) at wm_event_system.cc:3217:21
    frame #22: 0x0000000000a5385f blender`wm_handlers_do(C=0x0000000018bde7d8, event=0x00000000205cd1d8, handlers=0x000000001e950f60) at wm_event_system.cc:3334:16
    frame #23: 0x0000000000a529ad blender`::wm_event_do_handlers(C=0x0000000018bde7d8) at wm_event_system.cc:3925:17
    frame #24: 0x0000000000a44ab7 blender`WM_main(C=0x0000000018bde7d8) at wm.c:640:5
    frame #25: 0x0000000000230ee9 blender`main(argc=1, argv=0x00007fffffffe9d8) at creator.c:575:5
    frame #26: 0x00007ffff7de9290 libc.so.6`___lldb_unnamed_symbol3142 + 128
    frame #27: 0x00007ffff7de934a libc.so.6`__libc_start_main + 138
    frame #28: 0x0000000000230aa5 blender`_start at start.S:115
``` Process 37078 stopped * thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440) frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=0, UNUSED_tls=0x00007fffffffcb40) at sculpt_ops.c:1037:59 1034 SCULPT_undo_push_node(tdata->ob, node, SCULPT_UNDO_MASK); 1035 1036 AutomaskingNodeData automask_data; -> 1037 SCULPT_automasking_node_begin(tdata->ob, ss, ss->cache->automasking, &automask_data, node); 1038 1039 BKE_pbvh_vertex_iter_begin (ss->pbvh, node, vd, PBVH_ITER_UNIQUE) { 1040 SCULPT_automasking_node_update(ss, &automask_data, &vd); thread #22, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440) frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=2, UNUSED_tls=0x00007fffedbb68e0) at sculpt_ops.c:1037:59 1034 SCULPT_undo_push_node(tdata->ob, node, SCULPT_UNDO_MASK); 1035 1036 AutomaskingNodeData automask_data; -> 1037 SCULPT_automasking_node_begin(tdata->ob, ss, ss->cache->automasking, &automask_data, node); 1038 1039 BKE_pbvh_vertex_iter_begin (ss->pbvh, node, vd, PBVH_ITER_UNIQUE) { 1040 SCULPT_automasking_node_update(ss, &automask_data, &vd); thread #36, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440) frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=1, UNUSED_tls=0x00007fffa10c48e0) at sculpt_ops.c:1037:59 1034 SCULPT_undo_push_node(tdata->ob, node, SCULPT_UNDO_MASK); 1035 1036 AutomaskingNodeData automask_data; -> 1037 SCULPT_automasking_node_begin(tdata->ob, ss, ss->cache->automasking, &automask_data, node); 1038 1039 BKE_pbvh_vertex_iter_begin (ss->pbvh, node, vd, PBVH_ITER_UNIQUE) { 1040 SCULPT_automasking_node_update(ss, &automask_data, &vd); (lldb) bt * thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x440) * frame #0: 0x00000000020bd9b8 blender`sculpt_bake_cavity_exec_task_cb(userdata=0x00007fffffffd140, n=0, UNUSED_tls=0x00007fffffffcb40) at sculpt_ops.c:1037:59 frame #1: 0x000000000eff1219 blender`RangeTask::operator(this=0x0000000019328bd8, r=0x0000000019328bc8)(tbb::blocked_range<int> const&) const at task_range.cc:83:7 frame #2: 0x000000000eff1c1a blender`tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::run_body(this=0x0000000019328bc0, r=0x0000000019328bc8) at parallel_for.h:115:13 frame #3: 0x000000000eff1893 blender`void tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type> >::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(this=0x0000000019328bf8, start=0x0000000019328bc0, range=0x0000000019328bc8) at partitioner.h:423:19 frame #4: 0x000000000eff1790 blender`void tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(this=0x0000000019328bf8, start=0x0000000019328bc0, range=0x0000000019328bc8) at partitioner.h:256:16 frame #5: 0x000000000eff1677 blender`tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::execute(this=0x0000000019328bc0) at parallel_for.h:142:22 frame #6: 0x0000000000a3e035 blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) + 533 frame #7: 0x0000000000a3e2eb blender`tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) + 235 frame #8: 0x0000000000a3bb00 blender`tbb::internal::generic_scheduler::local_spawn_root_and_wait(tbb::task*, tbb::task*&) + 144 frame #9: 0x0000000000366b3b blender`tbb::task::spawn_root_and_wait(root=0x0000000019328bc0) at task.h:809:30 frame #10: 0x000000000eff140c blender`tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::run(range=0x00007fffffffd068, body=0x00007fffffffd078, partitioner=0x00007fffffffcff0) at parallel_for.h:95:17 frame #11: 0x000000000eff02ab blender`void tbb::parallel_for<tbb::blocked_range<int>, RangeTask>(range=0x00007fffffffd068, body=0x00007fffffffd078) at parallel_for.h:201:5 frame #12: 0x000000000efefdfe blender`::BLI_task_parallel_range(start=0, stop=3, userdata=0x00007fffffffd140, func=(blender`sculpt_bake_cavity_exec_task_cb at sculpt_ops.c:1026), settings=0x00007fffffffd108) at task_range.cc:117:7 frame #13: 0x00000000020bd831 blender`sculpt_bake_cavity_exec(C=0x0000000018bde7d8, op=0x000000001c51c778) at sculpt_ops.c:1150:3 frame #14: 0x0000000000a5aa59 blender`wm_operator_invoke(C=0x0000000018bde7d8, ot=0x0000000019110688, event=0x0000000019a9a9f8, properties=0x00007fffffffe0b0, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.cc:1455:16 frame #15: 0x0000000000a50567 blender`wm_operator_call_internal(C=0x0000000018bde7d8, ot=0x0000000019110688, properties=0x00007fffffffe0b0, reports=0x0000000000000000, context=WM_OP_INVOKE_REGION_WIN, poll_only=false, event=0x0000000019a9a9f8) at wm_event_system.cc:1649:18 frame #16: 0x0000000000a50f8a blender`::WM_operator_name_call_ptr(C=0x0000000018bde7d8, ot=0x0000000019110688, context=WM_OP_INVOKE_REGION_WIN, properties=0x00007fffffffe0b0, event=0x0000000000000000) at wm_event_system.cc:1697:10 frame #17: 0x0000000000a5139f blender`::WM_operator_name_call_ptr_with_depends_on_cursor(C=0x0000000018bde7d8, ot=0x0000000019110688, opcontext=WM_OP_INVOKE_REGION_WIN, properties=0x00007fffffffe0b0, event=0x0000000000000000, drawstr="Mask From Cavity") at wm_event_system.cc:1890:5 frame #18: 0x00000000021cc76c blender`ui_apply_but_funcs_after(C=0x0000000018bde7d8) at interface_handlers.c:1018:7 frame #19: 0x00000000021cac4e blender`ui_handler_region_menu(C=0x0000000018bde7d8, event=0x00000000205cd1d8, UNUSED_userdata=0x000000001f831d88) at interface_handlers.c:11405:3 frame #20: 0x0000000000a5c6d1 blender`wm_handler_ui_call(C=0x0000000018bde7d8, handler=0x000000001f673e98, event=0x00000000205cd1d8, always_pass=0) at wm_event_system.cc:786:16 frame #21: 0x0000000000a5ba37 blender`wm_handlers_do_intern(C=0x0000000018bde7d8, win=0x000000001e950e48, event=0x00000000205cd1d8, handlers=0x000000001e950f60) at wm_event_system.cc:3217:21 frame #22: 0x0000000000a5385f blender`wm_handlers_do(C=0x0000000018bde7d8, event=0x00000000205cd1d8, handlers=0x000000001e950f60) at wm_event_system.cc:3334:16 frame #23: 0x0000000000a529ad blender`::wm_event_do_handlers(C=0x0000000018bde7d8) at wm_event_system.cc:3925:17 frame #24: 0x0000000000a44ab7 blender`WM_main(C=0x0000000018bde7d8) at wm.c:640:5 frame #25: 0x0000000000230ee9 blender`main(argc=1, argv=0x00007fffffffe9d8) at creator.c:575:5 frame #26: 0x00007ffff7de9290 libc.so.6`___lldb_unnamed_symbol3142 + 128 frame #27: 0x00007ffff7de934a libc.so.6`__libc_start_main + 138 frame #28: 0x0000000000230aa5 blender`_start at start.S:115 ```
Author
Member

Bumped priority because it's a crash introduced by a new feature.

Bumped priority because it's a crash introduced by a new feature.

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

This issue was referenced by 6a9b45995d

This issue was referenced by 6a9b45995d8a9a1b88f9fbac892a573e461db8f4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-09-29 22:15:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101464
No description provided.