Sculpt: Fix T101464: Crash in mask from cavity